Textured Objects scaled to 0 cause black artefacts with Static BVH #45778

Closed
opened 2015-08-12 23:46:20 +02:00 by Thorsten Schlüter · 7 comments

System Information
Windows 7 64 Bit / Various NVidia Cards with current drivers

Blender Version
Broken: 2.75a / 2.75 / 2.74
Worked: 2.73a

Description
I have an animation I did with Blender 2.73a a few months ago. This animation uses textured plane objects I simply scale down to 0 to let them disappear.

I'm currently reusing this animation and when I try to preview/render it in Blender 2.75a with Cycles GPU rendering and Static BVH, there are strange black fields, but only if an object is scaled to 0. If I use for example 0.0001, everything looks fine. I can switch to CPU rendering and everything looks fine, too. Blender 2.74 shows the same behaviour but it works in 2.73a.

Looks like a bug to me and took me some time to figure out :-).

Cheers

Thorsten

Exact steps for others to reproduce the error
I added a Blend file that shows the problem. Open it, switch to Viewpoint Shading "Rendered" and go to frame 10, where the object showing the Blender logo is scaled to 0. A black field should appear.

Example.blend
Example_1.png
Example_0.png

**System Information** Windows 7 64 Bit / Various NVidia Cards with current drivers **Blender Version** Broken: 2.75a / 2.75 / 2.74 Worked: 2.73a **Description** I have an animation I did with Blender 2.73a a few months ago. This animation uses textured plane objects I simply scale down to 0 to let them disappear. I'm currently reusing this animation and when I try to preview/render it in Blender 2.75a with Cycles GPU rendering and Static BVH, there are strange black fields, but only if an object is scaled to 0. If I use for example 0.0001, everything looks fine. I can switch to CPU rendering and everything looks fine, too. Blender 2.74 shows the same behaviour but it works in 2.73a. Looks like a bug to me and took me some time to figure out :-). Cheers Thorsten **Exact steps for others to reproduce the error** I added a Blend file that shows the problem. Open it, switch to Viewpoint Shading "Rendered" and go to frame 10, where the object showing the Blender logo is scaled to 0. A black field should appear. [Example.blend](https://archive.blender.org/developer/F223797/Example.blend) ![Example_1.png](https://archive.blender.org/developer/F223800/Example_1.png) ![Example_0.png](https://archive.blender.org/developer/F223798/Example_0.png)

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @ThorstenSchluter

Added subscriber: @ThorstenSchluter
Sergey Sharybin was assigned by Bastien Montagne 2015-08-13 12:50:28 +02:00

Added subscribers: @mont29, @ThomasDinges

Added subscribers: @mont29, @ThomasDinges
Bastien Montagne changed title from Textured Objects scaled to 0 cause black artefacts with Static BVH to Textured Objects scaled to 0 cause black artefacts with Static BVH (NVidia GPU rendering) 2015-08-13 12:51:02 +02:00
Bastien Montagne changed title from Textured Objects scaled to 0 cause black artefacts with Static BVH (NVidia GPU rendering) to Textured Objects scaled to 0 cause black artefacts with Static BVH 2015-08-13 12:52:33 +02:00

Actually, not related to GPU rendering, can reproduce the issue with CPU rendering as well here…

Actually, not related to GPU rendering, can reproduce the issue with CPU rendering as well here…

This issue was referenced by 2fb639deed

This issue was referenced by 2fb639deedbdb0b0a821eb04ef69a7dd0080ea94

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

This issue was referenced by blender/cycles@a3b0911a65

This issue was referenced by blender/cycles@a3b0911a65720fe02e91005ff45bfde286c5a808
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#45778
No description provided.