intern/cycles/kernel/geom/geom_triangle_intersect.h
@@ -173,6 +173,9 @@ ccl_device_inline bool triangle_intersect(KernelGlobals *kg,
 	if(kernel_tex_fetch(__prim_visibility, triAddr) & visibility)
 #endif
 	{
+		if(len_squared(cross(tri_a, tri_b)) < 1e-14f) {
+			return false;
+		}
 		/* Normalize U, V, W, and T. */
 		const float inv_det = 1.0f / det;
 		isect->prim = triAddr;
